# NBA-Prediction-Model-v2

./: .gitignore  CLAUDE.md  pyproject.toml
configs/: bracket_seeds.yaml  dashboard.yaml  features.yaml  model_selection.yaml  training_windows.yaml
results/backtests/: backtest_full.csv  backtest_modern.csv  backtest_recent.csv
results/model_selection/: chosen_model_full.json  chosen_model_modern.json  chosen_model_recent.json
scripts/: backtest_bracket.py  build_2025_features.py  build_2025_team_features.py  build_2026_features.py  compare_models_insample.py  export_for_web.py  run_bracket_sim.py  run_dashboard.py  run_data_pipeline.py  run_injury_sim.py  run_model_selection.py  scrape_epm.py
scripts/analysis/: compare_models_insample.py  injury_counterfactual.py  injury_finals_impact.py  injury_scenarios.py  plot_reliability_diagram.py  plot_reliability_diagram_v2.py
src/dashboard/: bracket_builder.py  data_loader.py  html_renderer.py  ui_layout.py
src/data/: assemble.py  fetch.py  fetch_standings.py  quality.py
src/injury/: availability_history.py  export.py  identify_top_players.py  injury_overrides.py  simulate.py
src/model/: benchmark.py  evaluate.py  feature_sets.py  fit.py  select.py
src/shared/: text_utils.py
src/simulation/: aggregate.py  bracket.py  report.py  run_bracket.py  simulate_series.py
tests/: test_export_for_web.py
tests/data/: test_assemble.py  test_home_court.py  test_player_ratings.py  test_playoff_experience.py  test_quality.py  test_team_season_features.py
tests/injury/: test_availability_history.py  (+1 more)
(+11 files in other folders)
